Improvements to unit checking framework and simple path creation check to test new framework

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="payload-generator.js"></script>
+    <script src="payload-request.js"></script>
     <style>
       html, body {
         height: 675px;
