Created ability to add in different types of matchers / payloads for a request payload

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,11 @@
 
     <br />
 
+    <p>Request body matcher</p>
+    <textarea id="requestPayload" rows="4" cols="50"></textarea>
+
+    <br />
+
     <input type="button" id="makeRequest" value="Create" />
   </body>
 </html>
