Now can add response payloads

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,10 @@
 
     <br />
 
+    <textarea id="responsePayload" rows="4" cols="50"></textarea>
+
+    <br />
+
     <input type="button" id="makeRequest" value="Create" />
   </body>
 </html>
