--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
 
     <div id="mappingView">
       <h2>Mappings</h2>
+      <ul id="mappings">
+      </ul>
     </div>
 
     <div id="aboutView">
