Reset of stubbing form

--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,7 @@
       <br />
 
       <input type="button" id="makeRequest" value="Create" />
+      <input type="button" id="clearForm" value="Clear" />
     </div>
 
   </body>
