--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Wiremock extension</a>
+          <a class="navbar-brand" href="#"><img src="./assets/wiremock-concept-icon-01.png" alt="Wiremock logo" style="width: 20%"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
