--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,26 @@
         background-color: #333;
         color: #ddd;
       }
+
+      #stubView .row {
+        padding-bottom: 5px;
+      }
+
+      .queryStringMatcher .key {
+        width: 155px;
+      }
+
+      .queryStringMatcher .value {
+        width: 155px;
+      }
+
+      .requestHeader .key {
+        width: 155px;
+      }
+
+      .requestHeader .value {
+        width: 155px;
+      }
     </style>
   </head>
   <body>
@@ -74,8 +94,8 @@
     <div id="stubView" class="view">
       <div class="container-fluid" id="form">
         <div class="row center" id="pathRow">
-          <div class="col-xs-5">
-            <input type="text" id="requestPath" style="width: 190px" placeholder="Path"/>
+          <div class="col-xs-7">
+            <input type="text" id="requestPath" style="width: 255px" placeholder="Path"/>
           </div>
           <div class="col-xs-2">
             <select id="requestType">
@@ -148,12 +168,12 @@
         <hr />
 
         <div class="row center" id="statusRow">
-          <div class="col-xs-2">
-            <input type="text" id="statusCode" placeholder="Status code"/>
+          <div class="col-xs-1">
+            <input type="text" id="statusCode" style="width: 42px" placeholder="Status"/>
           </div>
           <div class="col-xs-8"></div>
-          <div class="col-xs-2">
-            <input type="text" id="priority" placeholder="Priority" style="width: 50px"/>
+          <div class="col-xs-3">
+            <input type="text" id="priority" placeholder="Priority" style="width: 50px; margin-right: -16px"/>
           </div>
         </div>
 
@@ -161,6 +181,7 @@
           <div class="col-xs-5">
             <input type="text" class="key" placeholder="Header key"/>
           </div>
+          <div class="col-xs-1"></div>
           <div class="col-xs-5">
             <input type="text" class="value" placeholder="Header value"/>
           </div>
