Created about section on settings page

--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,13 @@
         font-weight: bold;
         color: red;
       }
+
+      .about {
+        text-align: left;
+        border: 1px solid grey;
+        margin: 5px 0px 0px 15px;
+        width: 94%;
+      }
     </style>
   </head>
   <body>
@@ -138,6 +145,17 @@
           <div class="col-xs-7"></div>
           <div class="col-xs-3">
             <button type="button" id="updateWiremockHost" class="btn btn-success">Set host</button>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-12 about">
+            <h4>Wiremock Chrome Extension</h4>
+            <p>A simple chrome extension for Wiremock, created by Mark Winteringham</p>
+            <p>Twitter: <a href="https://twitter.com/2bittester" alt="Twitter">@2bittester</a></p>
+            <p>Website: <a href="http://www.mwtestconsultancy.co.uk" alt="Website">www.mwtestconsultancy.co.uk</a></p>
+            <br />
+            <p>Based upon the super awesome tool, Wiremock, that can be found at <a href="wiremock.org" alt="Wiremock">http://wiremock.org</a></p>
           </div>
         </div>
       </div>
