--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,10 @@
         margin: 5px 0px 0px 15px;
         width: 94%;
       }
+
+      .mappingTitle {
+        word-wrap: break-word;
+      }
     </style>
   </head>
   <body>
@@ -127,13 +131,19 @@
         </div>
 
         <div class="row center">
-          <div class="col-xs-8">
+          <div class="col-xs-2">
+            <select id="protocol" >
+              <option value="http">HTTP</option>
+              <option value="https">HTTPS</option>
+            </select>
+          </div>
+          <div class="col-xs-7">
             <input type="text" id="host" placeholder="Host" />
           </div>
           <div class="col-xs-1">
             <span>:</span>
           </div>
-          <div class="col-xs-3">
+          <div class="col-xs-2">
             <input type="text" id="port" placeholder="Port" />
           </div>
         </div>
@@ -241,8 +251,9 @@
           <div class="col-xs-1">
             <input type="text" id="statusCode" style="width: 42px" placeholder="Status"/>
           </div>
-          <div class="col-xs-8"></div>
-          <div class="col-xs-3">
+          <div class="col-xs-7"></div>
+          <div class="col-xs-4">
+            <label for="priority">Priority</label>
             <input type="text" id="priority" placeholder="Priority" style="width: 50px; margin-right: -16px"/>
           </div>
         </div>
