--- a/src/index.html
+++ b/src/index.html
@@ -174,17 +174,17 @@
     <div id="stubView" class="view">
       <div class="container-fluid" id="form">
         <div class="row center" id="pathRow">
-          <div class="col-xs-7">
-            <input type="text" id="requestPath" style="width: 255px" placeholder="Path"/>
-          </div>
           <div class="col-xs-2">
             <select id="requestType">
               <option value="PATH">path</option>
               <option value="REGEX">regex</option>
-              <option value="PARTIAL">partial</option>
+              <option value="PARTIAL">url equal to</option>
             </select>
           </div>
-          <div class="col-xs-3">
+          <div class="col-xs-7">
+            <input type="text" id="requestPath" style="margin-left: 18px; width: 100%" placeholder="Path"/>
+          </div>
+          <div class="col-xs-2">
             <select id="requestMethod">
               <option value="GET">GET</option>
               <option value="POST">POST</option>
@@ -283,7 +283,7 @@
             <button type="button" id="newForm" class="btn btn-danger">Clear</button>
           </div>
           <div class="col-xs-8">
-            <h5 style="text-align: right" id="status"></h5>
+            <h5 style="text-align: right; color: red" id="status"></h5>
           </div>
         </div>
 
