Added in feature to create multiple request payloads

--- a/src/index.html
+++ b/src/index.html
@@ -239,9 +239,9 @@
           </div>
         </div>
 
-        <div class="row">
-          <div class="col-xs-12">
-            <textarea id="requestPayload" rows="8" cols="72" placeholder="Request payload"></textarea>
+        <div class="row requestPayload" id="blankRequestPayload">
+          <div class="col-xs-12" style="text-align: right">
+            <textarea rows="8" cols="72" placeholder="Request payload"></textarea>
           </div>
         </div>
 
@@ -254,7 +254,7 @@
           <div class="col-xs-7"></div>
           <div class="col-xs-4">
             <label for="priority">Priority</label>
-            <input type="text" id="priority" placeholder="Priority" style="width: 50px; margin-right: -16px"/>
+            <input type="text" id="priority" style="width: 50px; margin-right: -16px"/>
           </div>
         </div>
 
