Predicates for request mappings now shown in UI

--- a/src/index.html
+++ b/src/index.html
@@ -90,6 +90,11 @@
       .mappingTitle {
         word-wrap: break-word;
       }
+
+      .predicate {
+        text-align: left;
+        float: left;
+      }
     </style>
   </head>
   <body>
@@ -242,6 +247,7 @@
         <div class="row requestPayload" id="blankRequestPayload">
           <div class="col-xs-12" style="text-align: right">
             <textarea rows="8" cols="72" placeholder="Request payload"></textarea>
+            <p class="predicate"></p>
           </div>
         </div>
 
